<resources>
    <string name="app_name">TejidosPulido</string>
    <string name="slogan_part1">Las mejores telas</string>
    <string name="slogan_part2">al mejor precio</string>
    <string name="login">Inicia sesión</string>
    <string name="signup">Regístrate ahora</string>
    <string name="signup_button">Registrar</string>
    <string name="back_to_login">Ya tengo una cuenta.</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="prefs_file">com.example.tejidospulido_app.PREFERENCE_FILE_KEY</string>

    <string name="navigation_drawre_open">Open navigation drawer</string>
    <string name="navigation_drawre_close">Close navigation drawer</string>


    //ProfileActivity
    <string name="mi_perfil">Mi perfil</string>
    <string name="nameTV">Nombre</string>
    <string name="emailTV">Email</string>
    <string name="Guardar">Guardar</string>
    <string name="password_modify">MODIFICAR CONTRASEÑA</string>
    <string name="direcciones">MIS DIRECCIONES</string>
    <string name="billing_address">Dirección de facturación</string>
    <string name="shipping_address">Dirección de envío</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="edit">Editar</string>
    <string name="deleteAccount">Para borrar tu cuenta de usuario o cancelarla, contacta con service@tejidospulido.es</string>
    <string name="help">Ayuda</string>
    <string name="orders">Mis pedidos</string>
    <string name="settings">Opciones</string>
    <string name="profile_image">Inserta una imagen de perfil</string>
    <string name="Search">¿Qué estás buscando?</string>
    <string name="AnadirCesta">Añadir a la cesta</string>
    <string name="Entrega">Entrega en 3-5 días laborables</string>
    <string name="envioEstandard">Envío estándar: 5,40 €</string>
    <string name="Valoraciones">Valoraciones</string>
    <string name="valoration_prueba">/5</string>
    <string name="Descripcion">Características del producto</string>
    <string name="Funcionalidad">Uso y funcionalidad</string>
    <string name="Similares">Productos similares</string>
    <string name="Coleccion">Descubre sus combinaciones</string>
    <string name="IntroduceCantidad">Introduce la cantidad</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Total">Total</string>
    <string name="Iva">Incl. IVA</string>
    <string name="Continuar">Continuar</string>
    <string name="Direccion">Dirección</string>
    <string name="Pago">Pago</string>
    <string name="Confirmacion">Confirmación</string>
    <string name="Hecho">¡Hecho!</string>
    <string name="DireccionEnvio">Dirección de envío</string>
    <string name="DatosContacto">Datos de contacto</string>
    <string name="infoDatosContacto">Para ponerse en contacto con tigo en caso de incidencia en la entrega.</string>
    <string name="telefonoMobil">Teléfono móvil (opcional)</string>
    <string name="Siguiente">Siguiente</string>
    <string name="FormaPago">Forma de pago</string>
    <string name="Paypal">Pago con Paypal</string>
    <string name="Rembolso">Pago contra reembolso</string>
    <string name="Tarjeta">Pago con tarjeta</string>
    <string name="codigoDescuento">Código descuento</string>
    <string name="opcional">(opcional)</string>
    <string name="infoCodigoDescuento">Código descuento: selecciona tu método de pago favorito e introduce tu código de descuento en el siguiente paso.</string>
    <string name="Envio">Envío</string>
    <string name="Gratis">Gratis</string>
    <string name="infoComprobarDatos">Podrás comprobar tus datos antes de finalizar el pedido</string>
    <string name="Pedido">Pedido</string>
    <string name="fechaEntrega">Fecha de entrega</string>
    <string name="IntroduceCodigo">Introduce el código aquí</string>
    <string name="PagarSeguro">Pagar de forma segura</string>
    <string name="infoTerminosPolitica">La realización de un pedido en Tejidos Pulido implica la aceptación de nuestros Términos y condiciones, la Política de privacidad y la Política de renovación.</string>
    <string name="GuardarDireccion">Guardar dirección</string>
    <string name="apellido">Apellido *</string>
    <string name="nombre">Nombre *</string>
    <string name="DireccionObligatoria">Dirección *</string>
    <string name="CodigoPostal">Código postal *</string>
    <string name="Pais">País *</string>
    <string name="Poblacion">Población *</string>
    <string name="Obligatorio">* Campos obligatorios</string>
    <string name="DireccionFacturacion">Dirección de facturación</string>
    <string name="setQuantity">Cambiar cantidad</string>
    <string name="AddFavoritos">Añadir a favoritos</string>
    <string name="Eliminar">Eliminar</string>
    <string name="similarArticles">Ver productos similares</string>
    <string name="addressName">Nombre de la dirección</string>
    <string name="introduceDireccion">Asigna una de tus direcciones o crea una de nueva.</string>
    <string name="addAddress">Añadir dirección</string>
    <string name="modifyAddress">Modificar la dirección</string>
    <string name="defaultAddress">Establece como dirección predeterminada</string>
    <string name="Cancelar">Cancelar</string>
    <string name="ErrorAddressesTitle">Direcciones incorrectas</string>
    <string name="ErrorAddressesMessage">Para continuar debe introducir correctamente los campos de Dirección de Envío y de Facturación.</string>
    <string name="ErrorPayFormTitle">Método de pago incorrecto</string>
    <string name="ErrorPayFormMessage">Para continuar debe seleccionar un método de pago.</string>
    <string name="firstValoration">Este producto no ha recibido ninguna valoración.</string>
    <string name="InfoValoraciones">Los clientes escriben voluntariamente las valoraciones, que se pueden leer mientras el producto esté disponible.</string>
    <string name="productosRecientes">Vistos recientemente</string>
    <string name="ListaRecientes">Recupera los productos que has visto recientemente.</string>

</resources>