<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/wellcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alice"
            android:textSize="20dp"
            android:padding="20dp"/>

        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:queryHint="@string/Guardar"
            android:paddingVertical="5dp"
            android:paddingHorizontal="20dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/recentProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productosRecientes"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/recientementeButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_right_arrow"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/ListaRecientes"
                android:textSize="14sp"
                android:layout_below="@+id/recentProducts" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recientes"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>