<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:paddingHorizontal="5dp">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="5dp"/>

            <RelativeLayout
                android:id="@+id/addressInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/checkbox">

                <ImageButton
                    android:id="@+id/editAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit"
                    android:background="@null"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="EMILI BELLOT"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name"
                    android:text="Carrer Churruca, 45"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/CP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/address"
                    android:text="08301"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/address"
                    android:layout_toEndOf="@id/CP"
                    android:text="Mataró"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginBottom="15dp"/>

                <TextView
                    android:id="@+id/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/CP"
                    android:text="España"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginEnd="10dp"/>

            </RelativeLayout>

            <ImageButton
                android:id="@+id/hideModify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_hide_desplegable"
                android:background="@null"
                android:layout_alignParentEnd="true"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/modifyAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@id/checkbox"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modifyAddress"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:paddingTop="5dp"
                    android:layout_marginEnd="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellido"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/surnameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/DireccionObligatoria"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CodigoPostal"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cpInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Poblacion"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cityInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Pais"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/countryInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/setDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultAddress"
                    android:textColor="@color/black"
                    android:layout_marginHorizontal="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingHorizontal="30dp"
                    android:text="@string/Obligatorio"/>

                <Button
                    android:id="@+id/saveAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_white"
                    android:text="@string/GuardarDireccion"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>